--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,34 @@
 {
   "translation": {
     "hello_world": "Hello, World",
+    "common": {
+      "close": "Close",
+      "verify": "Verify"
+    },
+    "header": {
+      "aggregation_parade": "aggregation Parade",
+      "novadrop": "NovaDrop",
+      "leaderboard": "Leaderboard",
+      "birdge": "Bridge",
+      "about": "About",
+      "useful_tools": "Useful Tools",
+      "merge_token": "Merge Token",
+      "unwrap_eth": "Unwrap ETH",
+      "user_guide": "User Guide",
+      "explorer": "Explorer",
+      "wallet_connect": "Wallet Connect",
+      "copy": "Copy",
+      "disconnect": "Disconnect",
+      "ur_invite_code": "Your Invite Code",
+      "ur_referrals": "Your Referrals",
+      "users": "Users",
+      "holding": "Holding",
+      "spot_dex": "Spot DEX",
+      "perp_dex": "Perp DEX",
+      "lending": "Lending",
+      "other": "Other",
+      "close": "Close"
+    },
     "home": {
       "welcome_to_zklink_nova": "Welcome To zkLink Nova",
       "the_only": "The ONLY Aggregated L3 with added yield for",
@@ -12,10 +40,162 @@
       "bridge_to_earn": "Bridge to earn Mega Yield and $ZKL on zkLink Nova",
       "enter_iinvite_code": "Enter Your Invite Code",
       "to_participate_in_the_campaign": "To participate in the campaign",
-      "join_our": "Join our",
+      "join_our": "Join our {{link}} or search {{tag}} on twitter for invite code",
       "discord": "Discord",
       "submit": "zkLink Nova Network TVL",
       "zklink_nova_network_tvl": "zkLink Nova Network TVL"
+    },
+    "kyc": {
+      "youre_almost_there": "You're Almost There",
+      "to_join_s2": "To join the zkLink Aggregation Parade S2",
+      "search_tag_on_twitter": "Search {{tag}} on Twitter",
+      "verify": "Verify",
+      "connect_ur_wallet": "Connect your wallet",
+      "prove_ur_ownership": "Prove your ownership of the address",
+      "connect_and_verify": "Connect and Verify",
+      "sign": "Sign",
+      "bridge_and_earn": "Bridge and Earn",
+      "bridge": "Bridge",
+      "minium_deposit": "Minimum deposit amount ≥ 0.1 ETH or equivalent",
+      "participate_zklink_agg": "Participate zkLink Aggregation Parade",
+      "tvl": "TVL"
+    },
+    "dashboard": {
+      "total_prize_pool": "Total Prize Pool",
+      "the_30_million_$zkl": "The 30 million $ZKL will be distributed over at least Three Epochs.",
+      "epoch_one_form": "Epoch One (From May 30th to July 15th)",
+      "all_supported_points": "All Supported Points",
+      "nova_points": "Nova Points",
+      "linea_lxp_l": "Linea LXP-L",
+      "eigenlayre_points": "Eigenlayer Points",
+      "puffer_points": "Puffer Points",
+      "renzo_points": "Renzo Points",
+      "eigenpie_points": "Eigenpie Points",
+      "kelpdao_miles": "KelpDAO Miles",
+      "allspark_points": "AllSpark Points",
+      "l_points": "L.Points",
+      "daily_roulette": "Daily Roulette",
+      "determined_by": "Determined by the consecutive days",
+      "determined_by_tooltip1": "Every day, users can spin the roulette up to X times to win zkLink Nova Trademark NFTs and Holding Points. The value of X is determined by the number of consecutive days the users have logged in and spun the roulette, with a maximum of 7.",
+      "determined_by_tooltip2": "X = min(7, consecutive days of spinning)",
+      "sun": "Sun",
+      "mon": "Mon",
+      "tue": "Tue",
+      "wed": "Wed",
+      "thu": "Thu",
+      "fri": "Fri",
+      "sat": "Sat",
+      "expired": "Expired",
+      "claim_reward": "Claim Reward",
+      "box_will_be_available": "Box will be available",
+      "exactly_in": "Exactly in {{num}} Hours",
+      "daily_roulette_desc": "On a daily basis, each user has x times of opportunity to participate in a Roulette game on the campaign page. Users have the probability to win trademarks and Lynks. The minimum reward will be 1 Nova Points.",
+      "switch_network": "Switch Network",
+      "check_invite_box": "Check Invite Box",
+      "open_ur_invite_box": "Open Your Invite Box",
+      "invite_box_points_tooltip": "Equivalent to depositing 1 ETH into Nova for ~{{num}} days",
+      "invite_box_desc": "With each referral, users have a chance to randomly draw one of the invite rewards. Invite reward boxes are Nova Points that will be directly added to your Holdings. Please note that Holding points are not NFTs.",
+      "switch_to_nova": "Switch to Nova Network To Draw",
+      "invite_more_friends": "Invite More Friends",
+      "assets": "Assets",
+      "boosted": "Boosted",
+      "spot_dex": "Spot DEX",
+      "perp_dex": "Perp DEX",
+      "lending": "Lending",
+      "ohter": "Other",
+      "portfolio": "Portfolio",
+      "zkl_allocation_for_sector": "$ZKL Allocation For {{sector}}",
+      "up_to_zkl": "Up To {{num}} $ZKL",
+      "next_zkl_allocation_lv": "Next $ZKL Allocation Level",
+      "next_zkl_allocation_lv_tooltip": "This sector will allocate 3,000,000 $ZKL after reaching the next milestone.",
+      "total_sector_allocated_points": "Total Sector Allocated Points",
+      "sector_allocated_points": "Sector Allocated Points",
+      "protocol_allocated_points": "Protocol Allocated Points",
+      "ur_allocated_points": "Your Allocated Points",
+      "by_interaction": "By Interaction",
+      "by_referral": "By Referral",
+      "ur_sector_points": "Your Sector Points",
+      "current_tvl": "Current TVL",
+      "next_tvl_milestone": "Next TVL Milestones",
+      "no_milestone_text": "This sector currently doesn't have a milestone, so the $ZKL allocation will grow contingently.",
+      "next_trading_volume_milestone": "Next Trading Volume Milestone",
+      "current_trading_volume": "Current Trading Volume",
+      "token": "Token",
+      "points_booster": "Points Booster",
+      "nova_tvl": "Nova TVL",
+      "ur_deposit": "Your Deposit",
+      "enter_token_symbol": "Enter Token Symbol To Search",
+      "merged_token": "Merged Token",
+      "action": "Action",
+      "participate": "Participate",
+      "merge_now": "Merge Now",
+      "bridge_now": "Bridge Now",
+      "protocol": "Protocol",
+      "rewards": "Rewards",
+      "allocated_points": "Allocated Points",
+      "up_to_booster": "Up to {{booster}}",
+      "how_to_earn": "How to Earn",
+      "ur_nova_points": "Your Nova Points",
+      "assets_points": "Assets Points",
+      "native_boost_points": "Native Boost Points",
+      "spot_dex_points": "Spot DEX Points",
+      "perp_dex_points": "Perp DEX Points",
+      "lending_points": "Lending Points",
+      "other_points": "Other Points",
+      "earned_by_holding": "Earned by holding",
+      "earned_by_referral": "Earned by Referral",
+      "earned_by_other": "Earned by Other Activities",
+      "earned_by_participate": "Earned by participate in Sector",
+      "earn_more": "Earn More",
+      "ur_project_points": "Your Project Points",
+      "hide_points": "Hide Points < 0.1",
+      "ur_nfts": "Your NFTs",
+      "nova_sbt": "Nova SBT",
+      "nova_sbt_desc": "Users who deposit a minimum amount of 0.1 ETH or equivalent can mint a zkLink Nova SBT.",
+      "mint_now": "Mint Now",
+      "nova_lynks": "Nova Lynks",
+      "nova_lynks_desc": "Collect ONE OF EACH of the four different types of Trademark NFTs to upgrade your SBT to Lynks.",
+      "oak_tree_roots": "Oak Tree Roots",
+      "oak_tree_roots_desc": "You can earn Oak Tree Roots by participating in the daily roulette or purchasing from OKX",
+      "magnifying_glass": "Magnifying Glass",
+      "magnifying_glass_desc": "You can earn Magnifying Glass by participating in the daily roulette or purchasing from OKX",
+      "chess_knight": "Chess Knight",
+      "chess_knight_desc": "You can earn Chess Knight by participating in the daily roulette or purchasing from OKX",
+      "binary_code_metrix_cube": "Binary Code Metrix Cube",
+      "binary_code_metrix_cube_desc": "You can earn Binary Code Metrix Cube by participating in the daily roulette or purchasing from OKX",
+      "buy_from_okx": "Buy From OKX"
+    },
+    "leaderboard": {
+      "points_leaderboard": "Points Leaderboard",
+      "points_leaderboard_desc": "The leaderboard is organized by sectors. In Season II, Nova Points will measure users' contributions to each sector. These points will determine the distribution of $ZKL rewards from each sector's prize pool.",
+      "epoch_one": "Epoch One",
+      "holding": "Holding",
+      "boosted": "Boosted",
+      "spot_dex": "Spot DEX",
+      "perp_dex": "Perp DEX",
+      "lending": "Lending",
+      "other": "Ohter",
+      "rank": "RANK",
+      "user": "USER",
+      "category_points": "{{category}} POINTS"
+    },
+    "bridge": {
+      "deposit": "DEPOSIT",
+      "withdraw": "WITHDRAW",
+      "from": "From",
+      "balance": "Balance",
+      "choose_token": "Choose Token",
+      "category": "Category",
+      "all": "All",
+      "native": "Native",
+      "stable": "Stable",
+      "synthetic": "Synthetic",
+      "rwa": "RWA",
+      "lst": "LST",
+      "lrt": "LRT",
+      "nova_points_tooltip": "By depositing into zkLink Nova, the Nova Points you'll earn every 8 hours.",
+      "estimated_time_of_arrival": "Estimated Time Of Arrival",
+      "est_time": "~{{num}} Minutes"
     }
   }
 }
