--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,7 +42,7 @@
       "to_participate_in_the_campaign": "To participate in the campaign",
       "join_our": "Join our {{link}} or search {{tag}} on twitter for invite code",
       "discord": "Discord",
-      "submit": "zkLink Nova Network TVL",
+      "submit": "Submit",
       "zklink_nova_network_tvl": "zkLink Nova Network TVL"
     },
     "kyc": {
@@ -133,6 +133,7 @@
       "protocol": "Protocol",
       "rewards": "Rewards",
       "allocated_points": "Allocated Points",
+      "boost_num": "{{booster}} boost",
       "up_to_booster": "Up to {{booster}}",
       "how_to_earn": "How to Earn",
       "ur_nova_points": "Your Nova Points",
@@ -163,7 +164,54 @@
       "chess_knight_desc": "You can earn Chess Knight by participating in the daily roulette or purchasing from OKX",
       "binary_code_metrix_cube": "Binary Code Metrix Cube",
       "binary_code_metrix_cube_desc": "You can earn Binary Code Metrix Cube by participating in the daily roulette or purchasing from OKX",
-      "buy_from_okx": "Buy From OKX"
+      "buy_from_okx": "Buy From OKX",
+      "booster": "Booster",
+      "description": "Description",
+      "provide_liquidity": "Provide Liquidity",
+      "trade": "Trade",
+      "novaswap_booster": "10x for Merged wBTC, wETH, USDT",
+      "eco_dapp_desc": "You earn points based on the liquidity you've supplied to the pool over a specific period, with the points multiplied accordingly.",
+      "warning": "WARNING",
+      "acdess_3rd_website": "You are about to access a third-party website. Please do your own research (DYOR) and avoid engaging in unfamiliar activities. Please note that zkLink and its affiliates are not liable for any losses, damages, or other consequences arising from your use of third-party websites.",
+      "recognize": "I recognize the risks and will take responsibility for actions on third-party websites.",
+      "continute_to_access": "Continute to Access",
+      "izumi_booster_1": "10x for ETH/wETH and merged wBTC, USDT, USDC",
+      "izumi_booster_2": "3x for externally bridged tokens (solvBTC.m)",
+      "izumi_booster_3": "Note: Boosts are provided only for effective liquidity. For AMM DEX, two-sided liquidity provision is required to qualify for the dApp booster.",
+      "wagmi_booster_1": "10x for Merged wBTC, wETH, USDT",
+      "wagmi_booster_2": "1 point / $200 volume",
+      "wagmi_trade_desc": "For every $200 in trading volume on Wagmi, you will receive 1 Nova Point.",
+      "logx_booster_1": "10x points for LPs providing USDT",
+      "logx_booster_2": "1 point / $200 volume",
+      "logx_trade_desc": "For every $1000 in trading volume on LogX, you will receive 1 Nova Point.",
+      "zkdx_booster_1": "10x for Merged ETH, USDC",
+      "zkdx_booster_2": "1 point / $200 volume",
+      "zkdx_trade_desc": "For every $200 in trading volume on zkDX, you will receive 1 Nova Point.",
+      "layerbank_booster_1": "10x for ETH/wETH and merged wBTC, USDT, USDC",
+      "layerbank_booster_2": "4x for canonically bridged tokens (pufETH.eth, Manta.manta, Stone.manta, wBTC.eth)",
+      "layerbank_booster_3": "2x for externally bridged tokens (solvBTC.m, mBTC, BTCT)",
+      "shoebill_booster_1": "10x for ETH",
+      "shoebill_booster_2": "10x for other supported points",
+      "native_lend_booster_1": "10x for ETH/wETH and merged wBTC, USDT, USDC",
+      "native_lend_booster_2": "4x for canonically bridged tokens",
+      "allspark_booster_1": "1 points per trade",
+      "allspark_desc": "For each transaction you make with Allspark, you can receive 0.5 Nova Points.",
+      "rubic_booster_1": "1 points per trade",
+      "rubic_desc": "For each transaction you make with Rubic, you can receive 1 Nova Point.",
+      "interport_booster_1": "10x for merged USDT and USDC",
+      "interport_desc": "For each block that liquidity is in a pool you earn points multiplied by the liquidity you provided",
+      "orbiter_booster_1": "5 Nova Points",
+      "orbiter_desc": "Bridge more than 0.1 ETH/ 500USDT /500 USDC to Nova to earn Nova Points.",
+      "orbiter_desc_tooltip": "You can earn Nova Points for each transaction of bridging to Nova over 0.1 ETH/ 500USDT /500 USDC (qualified transactions). Every day beginning at UTC+10:00, users who bridge to Nova early will receive more points. You'll accumulate Nova points as follows: 5 points for the initial 200 qualified transactions, 4 points for qualified transactions 201-400, 3 points for qualified transactions 401-600, 2 points for qualified transactions 601-800, and 1 point for any qualified transactions beyond that.",
+      "symbiosis_desc": "Bridge more than 0.1 ETH/ 500USDT /500 USDC to Nova to earn Nova Points.",
+      "symbiosis_desc_tooltip": "You can earn Nova Points for each transaction of bridging to Nova over 0.1 ETH/ 500USDT /500 USDC (qualified transactions). Every day beginning at UTC 0:00, users who bridge to Nova early will receive more points. You'll accumulate Nova points as follows: 5 points for the initial 200 qualified transactions, 4 points for qualified transactions 201-400, 3 points for qualified transactions 401-600, 2 points for qualified transactions 601-800, and 1 point for any qualified transactions beyond that.",
+      "meason_desc": "Bridge more than 0.1 ETH/ 500USDT /500 USDC to Nova to earn Nova Points.",
+      "meason_desc_tooltip": "You can earn Nova Points for each transaction of bridging to Nova over 0.1 ETH/ 500USDT /500 USDC (qualified transactions). Every day beginning at UTC 0:00, users who bridge to Nova early will receive more points. You'll accumulate Nova points as follows: 5 points for the initial 200 qualified transactions, 4 points for qualified transactions 201-400, 3 points for qualified transactions 401-600, 2 points for qualified transactions 601-800, and 1 point for any qualified transactions beyond that.",
+      "eddy_booster_1": "1 point / $200 volume",
+      "eddy_desc": "For every $200 in trading volume on Eddy Finance (Nova Network), you will receive 1 Nova Point.",
+      "eco_interaction": "Interaction",
+      "eco_bridge": "Bridge",
+      "eco_trading": "Trading"
     },
     "leaderboard": {
       "points_leaderboard": "Points Leaderboard",
@@ -180,6 +228,15 @@
       "category_points": "{{category}} POINTS"
     },
     "bridge": {
+      "the_industrys": "The Industry's Leading L3 Aggregating Fragmented Liquidity Across Ethereum",
+      "bridge_to_nova": "Bridge to zkLink Nova to Earn Nova Points & $ZKL",
+      "agg_s2": "Aggregation Parade Season II",
+      "agg_s2_desc1": "Total Prize Pool: 30M $ZKL (3% of total supply)",
+      "agg_s2_desc2": "Convert Nova Points to $ZKL and claim every epoch",
+      "agg_s2_desc3": "Earn Nova Points by actively performing holding assets, transactions, referring friends, and staking assets in DApps.",
+      "agg_s2_desc4": "Nova Lynks NFT holders in Season I & II share a separate 10M $ZKL prize pool",
+      "nova_nft_intro": "Nova NFT Introduction",
+      "nova_nft_intro_desc": "You will be able to mint one of the four Nova SBT once you bridge a minimal worth of 0.1 ETH.",
       "deposit": "DEPOSIT",
       "withdraw": "WITHDRAW",
       "from": "From",
@@ -195,7 +252,50 @@
       "lrt": "LRT",
       "nova_points_tooltip": "By depositing into zkLink Nova, the Nova Points you'll earn every 8 hours.",
       "estimated_time_of_arrival": "Estimated Time Of Arrival",
-      "est_time": "~{{num}} Minutes"
+      "est_time": "~{{num}} Minutes",
+      "earn_extra_nova_points": "Earn Extra Nova Points by deposit from third-party bridges!",
+      "free": "Free",
+      "free_desc": "Bridge Bitcoin assets to earn Nova Points.",
+      "orbiter_finance": "Orbiter Finance",
+      "orbiter_finance_desc": "Bridge more than 0.1 ETH/ 500USDT /500 USDC to Nova to earn Nova Points.",
+      "meson_finance": "Meson Finance",
+      "meson_finance_desc": "Bridge more than 0.1 ETH/ 500USDT /500 USDC to Nova to earn Nova Points.",
+      "symbiosis": "Symbiosis",
+      "symbiosis_desc": "Bridge more than 0.1 ETH/ 500USDT /500 USDC to Nova to earn Nova Points."
+    },
+    "about": {
+      "about_zklink_nova_agg": "About zkLink Nova Aggregation Parade",
+      "intro": "Introduction To The zkLink Nova Aggregation Parade",
+      "intro_desc1": "zkLink Nova is the first Aggregated Layer 3 ZK Rollup Network with EVM compatibility that’s built on top of Ethereum and multiple Ethereum Layer 2 Rollups.",
+      "intro_desc2": "The Aggregation Parade is a flagship campaign created to introduce users to the zkLink Nova platform and ecosystem, rewarding users with Nova Points, NFT rewards, and a share of $ZKL prize pools. Campaign participants earn Nova Points by interacting with zkLink Nova’s Layer 3 platform by bridging assets, engaging with zkLink Nova ecosystem DApps, referring friends, and contributing to the network’s TVL.",
+      "intro_desc3": "The Aggregation Parade has reached its second “Season.”",
+      "intro_desc4": "Season I of the Aggregation Parade concluded on May 30, 2024, 12 AM UTC – in which a snapshot of user Nova Points was taken and subsequent $ZKL was distributed.",
+      "intro_desc5": "Season II of the Aggregation Parade began on May 30, 2024, and will operate under an Epoch timeline, in which there will be at least Three Epochs.",
+      "intro_desc6": "The total prize pool for Aggregation Parade Season II will be 30 million $ZKL.",
+      "intro_desc7": "To participate in our Aggregation Parade Season II, head over to our {{campaign_portal}}",
+      "campaign_portal": "campaign portal",
+      "q1": "What is the Aggregation Parade Season 2?",
+      "a1": "Aggregation Parade Season 2 is a campaign by zkLink designed to incentivize participation within the zkLink ecosystem. Participants can earn Nova Points and NFTs (Lynks), which contribute to potential $ZKL token rewards.",
+      "q2": "When did Aggregation Parade Season 2 start",
+      "a2": "The second season of the Aggregation Parade started on May 30, 2024, at 10:00 AM UTC.",
+      "q3": "How can I earn Nova Points during Aggregation Parade Season 2?",
+      "a3": "You can earn Nova Points by actively performing transactions, holding assets, referring friends, and staking assets in DApps.",
+      "q4": "What are Nova Points and how do they benefit me?",
+      "a4": "Nova Points are rewards that participants earn for engaging with the zkLink ecosystem. Accumulating these points eables you to share the ZKL prize pools.",
+      "q5": "Is there a specific amount of ZKL tokens allocated for Aggregation Parade Season 2",
+      "a5": "3% of the total ZKL supply will be allocated to participants of Aggregation Parade Season 2.",
+      "q6": "What are the key improvements or new features introduced in Aggregation-Parade Season 2 compared to the first season?",
+      "a6": "The key improvements and features introduced in our Aggregation Parade Season II that are distinct from Season I include a newly designed and revamped dashboard, where users can view their Nova Points accumulated from their platform holdings, sector/vertical point rewards, DApp rewards, zkLink Nova native DApp booster rewards – as well as a brand new entertainment element where users can spin a daily “roulette” for surprise campaign benefits. In addition, Season II will convert user Nova Points to $ZKL at the end of each Epoch, in which there will be a total of at least three Epochs.",
+      "q7": "Can users now check how many Nova points they earn from each DApp in Season 2?",
+      "a7": "Yes. Users will be able to see their Nova Points accumulated from each DApp and the total Nova Points accumulated in a DApp’s category on the campaign dashboard. This applies across all sectors/verticals seen within the dashboard, and the DApps within them.",
+      "q8": "Where can I find more information about the Aggregation Parade and how to earn Nova Points?",
+      "a8": "You can find more details within our blog post",
+      "q9": "Is there any bonus that S1 participants can receive if they also participate in S2?(ex: points,booster)",
+      "a9": "Early participants (including S1 participants) can earn additional points by loyalty booster.",
+      "q10": "I have points from Season 1, will they be transferred In Season 2? ",
+      "a10": "Nova Points earned from Season I do not count, continue, or transfer over to Season II. Nova Points earned in Season II began on May 30, 2024, and will be calculated and converted into $ZKL at the end of each Epoch.",
+      "q11": "Can users who have minted Lynks NFTs in S1 still mint Lynk in S2 if they collect all 4 unique trademark NFTs?",
+      "a11": "Yes, you may mint additional Lynk in S2 and collect trademarks."
     }
   }
 }
