--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -15,31 +15,31 @@
       "useful_tools": "小工具",
       "merge_token": "Merge Token",
       "unwrap_eth": "Unwrap ETH",
-      "user_guide": "User Guide",
-      "explorer": "Explorer",
+      "user_guide": "用户指引",
+      "explorer": "区块链浏览器",
       "wallet_connect": "Wallet Connect",
       "copy": "Copy",
       "disconnect": "Disconnect",
-      "ur_invite_code": "Your Invite Code",
-      "ur_referrals": "Your Referrals",
-      "users": "Users",
+      "ur_invite_code": "你的邀请码",
+      "ur_referrals": "你的邀请",
+      "users": "用户",
       "close": "Close"
     },
     "home": {
-      "welcome_to_zklink_nova": "Welcome To zkLink Nova",
-      "the_only": "The ONLY Aggregated L3 with added yield for",
+      "welcome_to_zklink_nova": "欢迎",
+      "the_only": "市场上唯一拥有额外收益的聚合 L3",
       "eth": "ETH",
       "stablecoins": "Stablecoins",
       "lsts": "LSTs",
       "lrts": "LRTs",
       "l2_native_assets": "L2 Native Assets",
-      "bridge_to_earn": "Bridge to earn Mega Yield and $ZKL on zkLink Nova",
-      "enter_iinvite_code": "Enter Your Invite Code",
+      "bridge_to_earn": "跨链到 zkLink Nova 网络以赚取 ZKL",
+      "enter_iinvite_code": "输入邀请码",
       "to_participate_in_the_campaign": "To participate in the campaign",
-      "join_our": "Join our {{link}} or search {{tag}} on twitter for invite code",
+      "join_our": "加入我们的 {{link}} 或者在 X 上搜索 {{tag}}",
       "discord": "Discord",
-      "submit": "Submit",
-      "zklink_nova_network_tvl": "zkLink Nova Network TVL"
+      "submit": "发送",
+      "zklink_nova_network_tvl": "zkLink Nova 网络 TVL"
     },
     "kyc": {
       "youre_almost_there": "You're Almost There",
