--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,7 +34,7 @@
       "lrts": "LRTs",
       "l2_native_assets": "L2 Native Assets",
       "bridge_to_earn": "Bridge to earn Mega Yield and $ZKL on zkLink Nova",
-      "enter_iinvite_code": "Enter Your Invite Code",
+      "enter_invite_code": "Enter Your Invite Code",
       "to_participate_in_the_campaign": "To participate in the campaign",
       "join_our": "Join our {{link}} or search {{tag}} on twitter for invite code",
       "discord": "Discord",
