--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -34,7 +34,7 @@
       "lrts": "LRTs",
       "l2_native_assets": "L2 Native Assets",
       "bridge_to_earn": "跨链到 zkLink Nova 网络以赚取 ZKL",
-      "enter_iinvite_code": "输入邀请码",
+      "enter_invite_code": "输入邀请码",
       "to_participate_in_the_campaign": "To participate in the campaign",
       "join_our": "加入我们的 {{link}} 或者在 X 上搜索 {{tag}}",
       "discord": "Discord",
@@ -42,18 +42,18 @@
       "zklink_nova_network_tvl": "zkLink Nova 网络 TVL"
     },
     "kyc": {
-      "youre_almost_there": "You're Almost There",
-      "to_join_s2": "To join the zkLink Aggregation Parade S2",
-      "search_tag_on_twitter": "Search {{tag}} on Twitter",
-      "verify": "Verify",
-      "connect_ur_wallet": "Connect your wallet",
-      "prove_ur_ownership": "Prove your ownership of the address",
-      "connect_and_verify": "Connect and Verify",
-      "sign": "Sign",
-      "bridge_and_earn": "Bridge and Earn",
-      "bridge": "Bridge",
-      "minium_deposit": "Minimum deposit amount ≥ 0.1 ETH or equivalent",
-      "participate_zklink_agg": "Participate zkLink Aggregation Parade",
+      "youre_almost_there": "马上完成",
+      "to_join_s2": "参与 zkLink Aggregation Parade S2",
+      "search_tag_on_twitter": "在 Twitter 上搜索 {{tag}}",
+      "verify": "验证",
+      "connect_ur_wallet": "链接钱包",
+      "prove_ur_ownership": "证明你是该地址的所有者",
+      "connect_and_verify": "链接 & 验证",
+      "sign": "签名",
+      "bridge_and_earn": "桥接并赚取",
+      "bridge": "桥接",
+      "minium_deposit": "桥接大于等于 0.1 ETH 或等值的资产",
+      "participate_zklink_agg": "加入 zkLink Aggregation Parade",
       "tvl": "TVL"
     },
     "dashboard": {
